feat: add embedded database support and platform-specific paths
- add H2 embedded database with automatic fallback
- implement platform-specific default paths for logs and database
- add startup validation framework with user-friendly warnings
- improve error handling for optional features
- fix deprecated Java API usage
- update changelog and info.txt to version 2.0.0